--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+	<title>CHRYSALIS.TW</title>
+	<link rel="icon" href="favicon.png">
+</head>
+<body style="text-align: center;">
+	<img src="favicon.png" width="300" height="300" style="margin: auto;">
+	<h1><a href="https://chrysalistw.itch.io">Itch.io</a></h1>
+</body>
+</html>
