--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body style="text-align: center;">
 	<img src="favicon.png" width="300" height="300" style="margin: auto;">
 	<h1><a href="https://chrysalistw.itch.io">Chrysalis.tw@Itch.io</a></h1>
-	<iframe src="https://itch.io/embed/772939" width="552" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/html5-minesweeper">HTML5 Minesweeper by chrysalistw</a></iframe>
+	<iframe src="https://itch.io/embed/772939" width="208" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/html5-minesweeper">HTML5 Minesweeper by chrysalistw</a></iframe>
+	<iframe src="https://itch.io/embed/811493" width="208" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/hamilton">Hamilton by chrysalistw</a></iframe>
 	<br>
-	<iframe src="https://itch.io/embed/811493" width="552" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/hamilton">Hamilton by chrysalistw</a></iframe>
-	<br>
-	<iframe src="https://itch.io/embed/786810" width="552" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/html5-snake">HTML5 Snake by chrysalistw</a></iframe>
+	<iframe frameborder="0" src="https://itch.io/embed/869692" width="208" height="167"><a href="https://chrysalistw.itch.io/jigsaw-cube">Jigsaw Cube by chrysalistw</a></iframe>
+	<iframe src="https://itch.io/embed/786810" width="208" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/html5-snake">HTML5 Snake by chrysalistw</a></iframe>
 </body>
 </html>
