--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body style="text-align: center;">
 	<img src="favicon.png" width="300" height="300" style="margin: auto;">
 	<h1><a href="taiwan-map-quiz">台灣行政區測驗</a></h1>
+	<h1><a href="geometry">幾何互動教學</a></h1>
 	<br>
 	<h1><a href="https://chrysalistw.itch.io">Chrysalis.tw@Itch.io</a></h1>
 	<iframe src="https://itch.io/embed/772939" width="208" height="167" frameborder="0"><a href="https://chrysalistw.itch.io/html5-minesweeper">HTML5 Minesweeper by chrysalistw</a></iframe>
