--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	
 	gtag('config', 'G-P6VSM1DTN4');
 	</script>
+	<script data-ad-client="ca-pub-1493925916523994" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<title>CHRYSALIS.TW</title>
 	<link rel="icon" href="favicon.png">
 </head>
